работа с ключами и областями
